# grady-lib

./: BRANCH_TODO  CMakeLists.txt  LICENSE  README.md  TODO
src/: AltIntHash.hpp  BitPairSet.hpp  Common.hpp  MMapI2HRSOpenHashMap.hpp  MMapI2SOpenHashMap.hpp  MMapS2IOpenHashMap.hpp  MMapViewableOpenHashMap.hpp  OpenHashMap.hpp  OpenHashMapTC.hpp  OpenHashMapTc.hpp  OpenHashSetOfTriviallyCopyables.hpp  OpenHashSetTC.hpp  ParallelTraversals.hpp  ThreadPool.hpp  main.cpp
src/experiment/: AlignmentStuff.cpp  ExternalPolymorphism.cpp  MultipleInheritanceOfTemplate.cpp  PerfectForwardStuff.cpp  ReplaceRegex.cpp  Tensor.cpp  TestADL.cpp  TestAltIntHash.cpp  TestStringViewKeys.cpp
src/gradylib/: AltIntHash.hpp  BitPairSet.hpp  Common.hpp  CompletionPool.hpp  CompletionPoolPair.hpp  CompletionPoolStream.hpp  Exception.hpp  MMapI2HRSOpenHashMap.hpp  MMapI2SOpenHashMap.hpp  MMapS2IOpenHashMap.hpp  MMapViewableOpenHashMap.hpp  OpenHashMap.hpp  OpenHashMapTC.hpp  OpenHashSet.hpp  OpenHashSetTC.hpp  ParallelTraversals.hpp  ThreadPool.hpp
src/gradylib/nn/: ComputeBackend.hpp  Embedding.hpp  ExampleUse.cpp  FeatureIndexLookup.hpp  GraphNode.hpp  Linear.hpp  MLP.hpp  MergeLayer.hpp  Node.hpp  Params.hpp  TrainingOptions.hpp  TrainingReport.hpp
src/gradylib/nn2/: Composable.hpp  Embedding.hpp  Evaluatable.hpp  Layer.hpp  MyLayer.hpp  Trainable.hpp
src/gradylib/nn3/: Evaluator.hpp  Linear.hpp  Node.hpp  Params.hpp
src/gradylib/nn4/: BufferAllocator.hpp  DataType.hpp  DataTypeDeriver.hpp  Evaluator.hpp  Expression.hpp  Initializer.hpp  OutputBuffer.hpp  PrettyPrinter.hpp  Tensor.cpp  Tensor.hpp  TensorInput.cpp  Trainer.hpp  Util.hpp
src/gradylib/nn4/activation/: Scalarati.hpp  Tensorati.hpp
src/test/: AlignmentStuff.cpp  PerfectForwardStuff.cpp  TestAltIntHash.cpp  TestArrayAssignFunction.cpp  TestBitPairSet.cpp  TestCommon.hpp  TestCompletionPool.cpp  TestMMapI2HRSOpenHashMap.cpp  TestMMapViewableOpenHashMap.cpp  TestNN.cpp  TestNN2.cpp  TestOpenHashMap.cpp  TestOpenHashMapTC.cpp  TestOpenHashMapTC2.cpp  TestOpenHashSet.cpp  TestOpenHashSetTC.cpp  TestParallelMapOperation.cpp  TestParallelTraversals.cpp  TestStringViewKeys.cpp  ThreadPoolTest.cpp  testNNFeatureIndexer.cpp
src/test/nn/: TestMLP.cpp  TestNN.cpp  TestNN2.cpp  TestScalar.cpp  testNNFeatureIndexer.cpp
